fix: correct spacing between about and footer sections

--- a/styles/style.css
+++ b/styles/style.css
@@ -173,7 +173,7 @@
     box-sizing: border-box;
     width: 100%;
     max-width: 1052px;
-    margin: 0 auto 180px;      
+    margin: 0 auto 60px;
     padding: 180px 0 0 24px;
 }
 
@@ -271,8 +271,9 @@
     display: grid;
     grid-template-columns: 359px 1fr;
     gap: 25px;
-    padding: 180px 50px 180px 50px;
-    margin-top: 120px;
+    padding: 180px 50px 90px 50px;
+    margin-top: 60px;
+    margin-bottom: 0;
 }
 
 .about__logo {
@@ -297,6 +298,7 @@
 .about__column {
     padding-top: 120px;
 }
+
 .about__title {
     margin: 0 0 100px 0;
     font-size: 40px;
@@ -314,11 +316,12 @@
     font-size: 20px;
     line-height: 24px;
 }
+
 .footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 40px;
-    padding: 180px 50px 90px;
+    padding: 90px 50px 90px;
     align-items: start;
 }
 
@@ -336,6 +339,7 @@
 .footer__menu {
     justify-self: center;
 }
+
 .footer__menu-list {
     display: flex;
     flex-direction: column;
@@ -345,6 +349,7 @@
     margin: 0;
     text-align: center;
 }
+
 .footer__menu-link {
     color: #000;
     text-decoration: underline;
@@ -353,6 +358,7 @@
     font-size: 18px;
     line-height: 1.35;
 }
+
 .footer__menu-link_active {
     text-decoration: none;
 }
@@ -374,36 +380,4 @@
 .footer__social-list img {
     width: 48px;
     height: 48px;
-}
-@media (max-width: 1100px) {
-  .header {
-    padding: 92px 140px;
-  }
-  
-  .cover {
-    padding: 165px 140px 50px;
-  }
-  
-  .lots {
-    padding: 180px 140px 90px;
-  }
-  
-  .lots__card-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-  }
-  
-  .lots__card-list-item {
-    flex: 1;
-    min-width: 300px;
-  }
-  
-  .about {
-    padding: 0 140px 180px;
-  }
-  
-  .footer {
-    padding: 180px 140px 90px;
-  }
 }
